# timesheet-auto-creation

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  run.sh
src/: Dockerfile  create_timesheet.py  main.py  requirements.txt  timesheet_template.docx
src/static/css/: forms.css  home.css  success.css
src/templates/: create_timesheet.jinja2  layout.jinja2
timesheet-app/: Dockerfile  README.rst  main.py  pyproject.toml
timesheet-app/static/css/: style.css
timesheet-app/templates/: layout.jinja2
timesheet-app/tests/: test_timesheet_app.py
timesheet-app/timesheet_app/: create_timesheet.py
